parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARROW
    DICTIONARY
    DownTo
    FOREACH
    LBRACKET
    LENGTH
    LLLAVE
    NULL
    PRINT
    RBRACKET
    RLLAVE
    TRUE

Grammar

Rule 0     S' -> ejec
Rule 1     ejec -> WHILE LPAREN ID comparation INT RPAREN FUNSEP option FUNSEP
Rule 2     ejec -> CLASS ID FUNSEP atribC FUNSEP
Rule 3     atrib -> vas ID DOUBLEP TYPEDATA EQUALS data
Rule 4     comparation -> EQUALS
Rule 5     comparation -> GREATERTHAN
Rule 6     comparation -> LESSTHAN
Rule 7     print -> PRINTLN LPAREN data RPAREN
Rule 8     printDW -> print
Rule 9     printDW -> print printDW
Rule 10    ejec -> FUN ID LPAREN funcionparametro RPAREN DOUBLEP data FUNSEP RETURN ID FUNSEP
Rule 11    data -> INT
Rule 12    data -> CHAR
Rule 13    data -> FLOAT
Rule 14    data -> STR
Rule 15    atribC -> atrib
Rule 16    atribC -> atrib atribC
Rule 17    option -> assignment
Rule 18    option -> assignmentL
Rule 19    option -> printDW
Rule 20    ejec -> IF LPAREN ID comparation INT RPAREN FUNSEP option FUNSEP
Rule 21    ejec -> IF LPAREN ID comparation INT RPAREN FUNSEP option FUNSEP ELSE FUNSEP option FUNSEP
Rule 22    assignment -> vas ID EQUALS data
Rule 23    assignmentL -> assignmentL assignment
Rule 24    assignmentL -> assignment
Rule 25    vas -> VAL
Rule 26    vas -> VAR
Rule 27    ejec -> FOR LPAREN ID IN INT RPAREN FUNSEP FUNSEP
Rule 28    ejec -> VAL ID DOUBLEP LIST LESSTHAN liststring RPAREN
Rule 29    liststring -> STRING GREATERTHAN EQUALS listof LPAREN listadostringproduccion
Rule 30    liststring -> INT GREATERTHAN EQUALS listof LPAREN listadointproduccion
Rule 31    listadostring -> STR
Rule 32    listadostringproduccion -> listadostring
Rule 33    listadostringproduccion -> listadostring COMMA listadostringproduccion
Rule 34    listadoint -> INT
Rule 35    listadointproduccion -> listadoint
Rule 36    listadointproduccion -> listadoint COMMA listadointproduccion
Rule 37    ejec -> FUN ID LPAREN funcionproduccion RPAREN DOUBLEP UNIT FUNSEP FUNSEP
Rule 38    funcionparametro -> ID DOUBLEP funciondato
Rule 39    funciondato -> STRING
Rule 40    funciondato -> INTEGER
Rule 41    funcionproduccion -> funcionparametro
Rule 42    funcionproduccion -> ID DOUBLEP funciondato COMMA funcionproduccion
Rule 43    ejec -> ID DOT FOR EACH FUNSEP PRINTLN LPAREN ID RPAREN FUNSEP
Rule 44    ejec -> MAP LESSTHAN TYPEDATA COMMA TYPEDATA GREATERTHAN EQUALS MAP OF LPAREN pares RPAREN
Rule 45    pares -> pair
Rule 46    pares -> pair COMMA pares
Rule 47    pair -> PAIR LPAREN data COMMA data RPAREN
Rule 48    ejec -> function
Rule 49    function -> FUN ID LPAREN params RPAREN DOUBLEP FUNSEP
Rule 50    params -> param
Rule 51    params -> param COMMA params
Rule 52    param -> ID DOUBLEP TYPEDATA
Rule 53    param -> ID DOUBLEP TYPEDATA EQUALS data
Rule 54    ejec -> FUN ID LPAREN funcionproduccion RPAREN DOUBLEP TYPEDATA EQUALS assignment

Terminals, with rules where they appear

ARROW                : 
CHAR                 : 12
CLASS                : 2
COMMA                : 33 36 42 44 46 47 51
DICTIONARY           : 
DOT                  : 43
DOUBLEP              : 3 10 28 37 38 42 49 52 53 54
DownTo               : 
EACH                 : 43
ELSE                 : 21
EQUALS               : 3 4 22 29 30 44 53 54
FLOAT                : 13
FOR                  : 27 43
FOREACH              : 
FUN                  : 10 37 49 54
FUNSEP               : 1 1 2 2 10 10 20 20 21 21 21 21 27 27 37 37 43 43 49
GREATERTHAN          : 5 29 30 44
ID                   : 1 2 3 10 10 20 21 22 27 28 37 38 42 43 43 49 52 53 54
IF                   : 20 21
IN                   : 27
INT                  : 1 11 20 21 27 30 34
INTEGER              : 40
LBRACKET             : 
LENGTH               : 
LESSTHAN             : 6 28 44
LIST                 : 28
LLLAVE               : 
LPAREN               : 1 7 10 20 21 27 29 30 37 43 44 47 49 54
MAP                  : 44 44
NULL                 : 
OF                   : 44
PAIR                 : 47
PRINT                : 
PRINTLN              : 7 43
RBRACKET             : 
RETURN               : 10
RLLAVE               : 
RPAREN               : 1 7 10 20 21 27 28 37 43 44 47 49 54
STR                  : 14 31
STRING               : 29 39
TRUE                 : 
TYPEDATA             : 3 44 44 52 53 54
UNIT                 : 37
VAL                  : 25 28
VAR                  : 26
WHILE                : 1
error                : 
listof               : 29 30

Nonterminals, with rules where they appear

assignment           : 17 23 24 54
assignmentL          : 18 23
atrib                : 15 16
atribC               : 2 16
comparation          : 1 20 21
data                 : 3 7 10 22 47 47 53
ejec                 : 0
funciondato          : 38 42
funcionparametro     : 10 41
funcionproduccion    : 37 42 54
function             : 48
listadoint           : 35 36
listadointproduccion : 30 36
listadostring        : 32 33
listadostringproduccion : 29 33
liststring           : 28
option               : 1 20 21 21
pair                 : 45 46
param                : 50 51
params               : 49 51
pares                : 44 46
print                : 8 9
printDW              : 9 19
vas                  : 3 22

Parsing method: LALR

state 0

    (0) S' -> . ejec
    (1) ejec -> . WHILE LPAREN ID comparation INT RPAREN FUNSEP option FUNSEP
    (2) ejec -> . CLASS ID FUNSEP atribC FUNSEP
    (10) ejec -> . FUN ID LPAREN funcionparametro RPAREN DOUBLEP data FUNSEP RETURN ID FUNSEP
    (20) ejec -> . IF LPAREN ID comparation INT RPAREN FUNSEP option FUNSEP
    (21) ejec -> . IF LPAREN ID comparation INT RPAREN FUNSEP option FUNSEP ELSE FUNSEP option FUNSEP
    (27) ejec -> . FOR LPAREN ID IN INT RPAREN FUNSEP FUNSEP
    (28) ejec -> . VAL ID DOUBLEP LIST LESSTHAN liststring RPAREN
    (37) ejec -> . FUN ID LPAREN funcionproduccion RPAREN DOUBLEP UNIT FUNSEP FUNSEP
    (43) ejec -> . ID DOT FOR EACH FUNSEP PRINTLN LPAREN ID RPAREN FUNSEP
    (44) ejec -> . MAP LESSTHAN TYPEDATA COMMA TYPEDATA GREATERTHAN EQUALS MAP OF LPAREN pares RPAREN
    (48) ejec -> . function
    (54) ejec -> . FUN ID LPAREN funcionproduccion RPAREN DOUBLEP TYPEDATA EQUALS assignment
    (49) function -> . FUN ID LPAREN params RPAREN DOUBLEP FUNSEP

    WHILE           shift and go to state 2
    CLASS           shift and go to state 4
    FUN             shift and go to state 5
    IF              shift and go to state 6
    FOR             shift and go to state 7
    VAL             shift and go to state 8
    ID              shift and go to state 3
    MAP             shift and go to state 9

    ejec                           shift and go to state 1
    function                       shift and go to state 10

state 1

    (0) S' -> ejec .



state 2

    (1) ejec -> WHILE . LPAREN ID comparation INT RPAREN FUNSEP option FUNSEP

    LPAREN          shift and go to state 11


state 3

    (43) ejec -> ID . DOT FOR EACH FUNSEP PRINTLN LPAREN ID RPAREN FUNSEP

    DOT             shift and go to state 12


state 4

    (2) ejec -> CLASS . ID FUNSEP atribC FUNSEP

    ID              shift and go to state 13


state 5

    (10) ejec -> FUN . ID LPAREN funcionparametro RPAREN DOUBLEP data FUNSEP RETURN ID FUNSEP
    (37) ejec -> FUN . ID LPAREN funcionproduccion RPAREN DOUBLEP UNIT FUNSEP FUNSEP
    (54) ejec -> FUN . ID LPAREN funcionproduccion RPAREN DOUBLEP TYPEDATA EQUALS assignment
    (49) function -> FUN . ID LPAREN params RPAREN DOUBLEP FUNSEP

    ID              shift and go to state 14


state 6

    (20) ejec -> IF . LPAREN ID comparation INT RPAREN FUNSEP option FUNSEP
    (21) ejec -> IF . LPAREN ID comparation INT RPAREN FUNSEP option FUNSEP ELSE FUNSEP option FUNSEP

    LPAREN          shift and go to state 15


state 7

    (27) ejec -> FOR . LPAREN ID IN INT RPAREN FUNSEP FUNSEP

    LPAREN          shift and go to state 16


state 8

    (28) ejec -> VAL . ID DOUBLEP LIST LESSTHAN liststring RPAREN

    ID              shift and go to state 17


state 9

    (44) ejec -> MAP . LESSTHAN TYPEDATA COMMA TYPEDATA GREATERTHAN EQUALS MAP OF LPAREN pares RPAREN

    LESSTHAN        shift and go to state 18


state 10

    (48) ejec -> function .

    $end            reduce using rule 48 (ejec -> function .)


state 11

    (1) ejec -> WHILE LPAREN . ID comparation INT RPAREN FUNSEP option FUNSEP

    ID              shift and go to state 19


state 12

    (43) ejec -> ID DOT . FOR EACH FUNSEP PRINTLN LPAREN ID RPAREN FUNSEP

    FOR             shift and go to state 20


state 13

    (2) ejec -> CLASS ID . FUNSEP atribC FUNSEP

    FUNSEP          shift and go to state 21


state 14

    (10) ejec -> FUN ID . LPAREN funcionparametro RPAREN DOUBLEP data FUNSEP RETURN ID FUNSEP
    (37) ejec -> FUN ID . LPAREN funcionproduccion RPAREN DOUBLEP UNIT FUNSEP FUNSEP
    (54) ejec -> FUN ID . LPAREN funcionproduccion RPAREN DOUBLEP TYPEDATA EQUALS assignment
    (49) function -> FUN ID . LPAREN params RPAREN DOUBLEP FUNSEP

    LPAREN          shift and go to state 22


state 15

    (20) ejec -> IF LPAREN . ID comparation INT RPAREN FUNSEP option FUNSEP
    (21) ejec -> IF LPAREN . ID comparation INT RPAREN FUNSEP option FUNSEP ELSE FUNSEP option FUNSEP

    ID              shift and go to state 23


state 16

    (27) ejec -> FOR LPAREN . ID IN INT RPAREN FUNSEP FUNSEP

    ID              shift and go to state 24


state 17

    (28) ejec -> VAL ID . DOUBLEP LIST LESSTHAN liststring RPAREN

    DOUBLEP         shift and go to state 25


state 18

    (44) ejec -> MAP LESSTHAN . TYPEDATA COMMA TYPEDATA GREATERTHAN EQUALS MAP OF LPAREN pares RPAREN

    TYPEDATA        shift and go to state 26


state 19

    (1) ejec -> WHILE LPAREN ID . comparation INT RPAREN FUNSEP option FUNSEP
    (4) comparation -> . EQUALS
    (5) comparation -> . GREATERTHAN
    (6) comparation -> . LESSTHAN

    EQUALS          shift and go to state 28
    GREATERTHAN     shift and go to state 29
    LESSTHAN        shift and go to state 30

    comparation                    shift and go to state 27

state 20

    (43) ejec -> ID DOT FOR . EACH FUNSEP PRINTLN LPAREN ID RPAREN FUNSEP

    EACH            shift and go to state 31


state 21

    (2) ejec -> CLASS ID FUNSEP . atribC FUNSEP
    (15) atribC -> . atrib
    (16) atribC -> . atrib atribC
    (3) atrib -> . vas ID DOUBLEP TYPEDATA EQUALS data
    (25) vas -> . VAL
    (26) vas -> . VAR

    VAL             shift and go to state 35
    VAR             shift and go to state 36

    atribC                         shift and go to state 32
    atrib                          shift and go to state 33
    vas                            shift and go to state 34

state 22

    (10) ejec -> FUN ID LPAREN . funcionparametro RPAREN DOUBLEP data FUNSEP RETURN ID FUNSEP
    (37) ejec -> FUN ID LPAREN . funcionproduccion RPAREN DOUBLEP UNIT FUNSEP FUNSEP
    (54) ejec -> FUN ID LPAREN . funcionproduccion RPAREN DOUBLEP TYPEDATA EQUALS assignment
    (49) function -> FUN ID LPAREN . params RPAREN DOUBLEP FUNSEP
    (38) funcionparametro -> . ID DOUBLEP funciondato
    (41) funcionproduccion -> . funcionparametro
    (42) funcionproduccion -> . ID DOUBLEP funciondato COMMA funcionproduccion
    (50) params -> . param
    (51) params -> . param COMMA params
    (52) param -> . ID DOUBLEP TYPEDATA
    (53) param -> . ID DOUBLEP TYPEDATA EQUALS data

    ID              shift and go to state 37

    funcionparametro               shift and go to state 38
    funcionproduccion              shift and go to state 39
    params                         shift and go to state 40
    param                          shift and go to state 41

state 23

    (20) ejec -> IF LPAREN ID . comparation INT RPAREN FUNSEP option FUNSEP
    (21) ejec -> IF LPAREN ID . comparation INT RPAREN FUNSEP option FUNSEP ELSE FUNSEP option FUNSEP
    (4) comparation -> . EQUALS
    (5) comparation -> . GREATERTHAN
    (6) comparation -> . LESSTHAN

    EQUALS          shift and go to state 28
    GREATERTHAN     shift and go to state 29
    LESSTHAN        shift and go to state 30

    comparation                    shift and go to state 42

state 24

    (27) ejec -> FOR LPAREN ID . IN INT RPAREN FUNSEP FUNSEP

    IN              shift and go to state 43


state 25

    (28) ejec -> VAL ID DOUBLEP . LIST LESSTHAN liststring RPAREN

    LIST            shift and go to state 44


state 26

    (44) ejec -> MAP LESSTHAN TYPEDATA . COMMA TYPEDATA GREATERTHAN EQUALS MAP OF LPAREN pares RPAREN

    COMMA           shift and go to state 45


state 27

    (1) ejec -> WHILE LPAREN ID comparation . INT RPAREN FUNSEP option FUNSEP

    INT             shift and go to state 46


state 28

    (4) comparation -> EQUALS .

    INT             reduce using rule 4 (comparation -> EQUALS .)


state 29

    (5) comparation -> GREATERTHAN .

    INT             reduce using rule 5 (comparation -> GREATERTHAN .)


state 30

    (6) comparation -> LESSTHAN .

    INT             reduce using rule 6 (comparation -> LESSTHAN .)


state 31

    (43) ejec -> ID DOT FOR EACH . FUNSEP PRINTLN LPAREN ID RPAREN FUNSEP

    FUNSEP          shift and go to state 47


state 32

    (2) ejec -> CLASS ID FUNSEP atribC . FUNSEP

    FUNSEP          shift and go to state 48


state 33

    (15) atribC -> atrib .
    (16) atribC -> atrib . atribC
    (15) atribC -> . atrib
    (16) atribC -> . atrib atribC
    (3) atrib -> . vas ID DOUBLEP TYPEDATA EQUALS data
    (25) vas -> . VAL
    (26) vas -> . VAR

    FUNSEP          reduce using rule 15 (atribC -> atrib .)
    VAL             shift and go to state 35
    VAR             shift and go to state 36

    atrib                          shift and go to state 33
    atribC                         shift and go to state 49
    vas                            shift and go to state 34

state 34

    (3) atrib -> vas . ID DOUBLEP TYPEDATA EQUALS data

    ID              shift and go to state 50


state 35

    (25) vas -> VAL .

    ID              reduce using rule 25 (vas -> VAL .)


state 36

    (26) vas -> VAR .

    ID              reduce using rule 26 (vas -> VAR .)


state 37

    (38) funcionparametro -> ID . DOUBLEP funciondato
    (42) funcionproduccion -> ID . DOUBLEP funciondato COMMA funcionproduccion
    (52) param -> ID . DOUBLEP TYPEDATA
    (53) param -> ID . DOUBLEP TYPEDATA EQUALS data

    DOUBLEP         shift and go to state 51


state 38

    (10) ejec -> FUN ID LPAREN funcionparametro . RPAREN DOUBLEP data FUNSEP RETURN ID FUNSEP
    (41) funcionproduccion -> funcionparametro .

  ! shift/reduce conflict for RPAREN resolved as shift
    RPAREN          shift and go to state 52

  ! RPAREN          [ reduce using rule 41 (funcionproduccion -> funcionparametro .) ]


state 39

    (37) ejec -> FUN ID LPAREN funcionproduccion . RPAREN DOUBLEP UNIT FUNSEP FUNSEP
    (54) ejec -> FUN ID LPAREN funcionproduccion . RPAREN DOUBLEP TYPEDATA EQUALS assignment

    RPAREN          shift and go to state 53


state 40

    (49) function -> FUN ID LPAREN params . RPAREN DOUBLEP FUNSEP

    RPAREN          shift and go to state 54


state 41

    (50) params -> param .
    (51) params -> param . COMMA params

    RPAREN          reduce using rule 50 (params -> param .)
    COMMA           shift and go to state 55


state 42

    (20) ejec -> IF LPAREN ID comparation . INT RPAREN FUNSEP option FUNSEP
    (21) ejec -> IF LPAREN ID comparation . INT RPAREN FUNSEP option FUNSEP ELSE FUNSEP option FUNSEP

    INT             shift and go to state 56


state 43

    (27) ejec -> FOR LPAREN ID IN . INT RPAREN FUNSEP FUNSEP

    INT             shift and go to state 57


state 44

    (28) ejec -> VAL ID DOUBLEP LIST . LESSTHAN liststring RPAREN

    LESSTHAN        shift and go to state 58


state 45

    (44) ejec -> MAP LESSTHAN TYPEDATA COMMA . TYPEDATA GREATERTHAN EQUALS MAP OF LPAREN pares RPAREN

    TYPEDATA        shift and go to state 59


state 46

    (1) ejec -> WHILE LPAREN ID comparation INT . RPAREN FUNSEP option FUNSEP

    RPAREN          shift and go to state 60


state 47

    (43) ejec -> ID DOT FOR EACH FUNSEP . PRINTLN LPAREN ID RPAREN FUNSEP

    PRINTLN         shift and go to state 61


state 48

    (2) ejec -> CLASS ID FUNSEP atribC FUNSEP .

    $end            reduce using rule 2 (ejec -> CLASS ID FUNSEP atribC FUNSEP .)


state 49

    (16) atribC -> atrib atribC .

    FUNSEP          reduce using rule 16 (atribC -> atrib atribC .)


state 50

    (3) atrib -> vas ID . DOUBLEP TYPEDATA EQUALS data

    DOUBLEP         shift and go to state 62


state 51

    (38) funcionparametro -> ID DOUBLEP . funciondato
    (42) funcionproduccion -> ID DOUBLEP . funciondato COMMA funcionproduccion
    (52) param -> ID DOUBLEP . TYPEDATA
    (53) param -> ID DOUBLEP . TYPEDATA EQUALS data
    (39) funciondato -> . STRING
    (40) funciondato -> . INTEGER

    TYPEDATA        shift and go to state 64
    STRING          shift and go to state 65
    INTEGER         shift and go to state 66

    funciondato                    shift and go to state 63

state 52

    (10) ejec -> FUN ID LPAREN funcionparametro RPAREN . DOUBLEP data FUNSEP RETURN ID FUNSEP

    DOUBLEP         shift and go to state 67


state 53

    (37) ejec -> FUN ID LPAREN funcionproduccion RPAREN . DOUBLEP UNIT FUNSEP FUNSEP
    (54) ejec -> FUN ID LPAREN funcionproduccion RPAREN . DOUBLEP TYPEDATA EQUALS assignment

    DOUBLEP         shift and go to state 68


state 54

    (49) function -> FUN ID LPAREN params RPAREN . DOUBLEP FUNSEP

    DOUBLEP         shift and go to state 69


state 55

    (51) params -> param COMMA . params
    (50) params -> . param
    (51) params -> . param COMMA params
    (52) param -> . ID DOUBLEP TYPEDATA
    (53) param -> . ID DOUBLEP TYPEDATA EQUALS data

    ID              shift and go to state 71

    param                          shift and go to state 41
    params                         shift and go to state 70

state 56

    (20) ejec -> IF LPAREN ID comparation INT . RPAREN FUNSEP option FUNSEP
    (21) ejec -> IF LPAREN ID comparation INT . RPAREN FUNSEP option FUNSEP ELSE FUNSEP option FUNSEP

    RPAREN          shift and go to state 72


state 57

    (27) ejec -> FOR LPAREN ID IN INT . RPAREN FUNSEP FUNSEP

    RPAREN          shift and go to state 73


state 58

    (28) ejec -> VAL ID DOUBLEP LIST LESSTHAN . liststring RPAREN
    (29) liststring -> . STRING GREATERTHAN EQUALS listof LPAREN listadostringproduccion
    (30) liststring -> . INT GREATERTHAN EQUALS listof LPAREN listadointproduccion

    STRING          shift and go to state 75
    INT             shift and go to state 76

    liststring                     shift and go to state 74

state 59

    (44) ejec -> MAP LESSTHAN TYPEDATA COMMA TYPEDATA . GREATERTHAN EQUALS MAP OF LPAREN pares RPAREN

    GREATERTHAN     shift and go to state 77


state 60

    (1) ejec -> WHILE LPAREN ID comparation INT RPAREN . FUNSEP option FUNSEP

    FUNSEP          shift and go to state 78


state 61

    (43) ejec -> ID DOT FOR EACH FUNSEP PRINTLN . LPAREN ID RPAREN FUNSEP

    LPAREN          shift and go to state 79


state 62

    (3) atrib -> vas ID DOUBLEP . TYPEDATA EQUALS data

    TYPEDATA        shift and go to state 80


state 63

    (38) funcionparametro -> ID DOUBLEP funciondato .
    (42) funcionproduccion -> ID DOUBLEP funciondato . COMMA funcionproduccion

    RPAREN          reduce using rule 38 (funcionparametro -> ID DOUBLEP funciondato .)
    COMMA           shift and go to state 81


state 64

    (52) param -> ID DOUBLEP TYPEDATA .
    (53) param -> ID DOUBLEP TYPEDATA . EQUALS data

    COMMA           reduce using rule 52 (param -> ID DOUBLEP TYPEDATA .)
    RPAREN          reduce using rule 52 (param -> ID DOUBLEP TYPEDATA .)
    EQUALS          shift and go to state 82


state 65

    (39) funciondato -> STRING .

    COMMA           reduce using rule 39 (funciondato -> STRING .)
    RPAREN          reduce using rule 39 (funciondato -> STRING .)


state 66

    (40) funciondato -> INTEGER .

    COMMA           reduce using rule 40 (funciondato -> INTEGER .)
    RPAREN          reduce using rule 40 (funciondato -> INTEGER .)


state 67

    (10) ejec -> FUN ID LPAREN funcionparametro RPAREN DOUBLEP . data FUNSEP RETURN ID FUNSEP
    (11) data -> . INT
    (12) data -> . CHAR
    (13) data -> . FLOAT
    (14) data -> . STR

    INT             shift and go to state 84
    CHAR            shift and go to state 85
    FLOAT           shift and go to state 86
    STR             shift and go to state 87

    data                           shift and go to state 83

state 68

    (37) ejec -> FUN ID LPAREN funcionproduccion RPAREN DOUBLEP . UNIT FUNSEP FUNSEP
    (54) ejec -> FUN ID LPAREN funcionproduccion RPAREN DOUBLEP . TYPEDATA EQUALS assignment

    UNIT            shift and go to state 88
    TYPEDATA        shift and go to state 89


state 69

    (49) function -> FUN ID LPAREN params RPAREN DOUBLEP . FUNSEP

    FUNSEP          shift and go to state 90


state 70

    (51) params -> param COMMA params .

    RPAREN          reduce using rule 51 (params -> param COMMA params .)


state 71

    (52) param -> ID . DOUBLEP TYPEDATA
    (53) param -> ID . DOUBLEP TYPEDATA EQUALS data

    DOUBLEP         shift and go to state 91


state 72

    (20) ejec -> IF LPAREN ID comparation INT RPAREN . FUNSEP option FUNSEP
    (21) ejec -> IF LPAREN ID comparation INT RPAREN . FUNSEP option FUNSEP ELSE FUNSEP option FUNSEP

    FUNSEP          shift and go to state 92


state 73

    (27) ejec -> FOR LPAREN ID IN INT RPAREN . FUNSEP FUNSEP

    FUNSEP          shift and go to state 93


state 74

    (28) ejec -> VAL ID DOUBLEP LIST LESSTHAN liststring . RPAREN

    RPAREN          shift and go to state 94


state 75

    (29) liststring -> STRING . GREATERTHAN EQUALS listof LPAREN listadostringproduccion

    GREATERTHAN     shift and go to state 95


state 76

    (30) liststring -> INT . GREATERTHAN EQUALS listof LPAREN listadointproduccion

    GREATERTHAN     shift and go to state 96


state 77

    (44) ejec -> MAP LESSTHAN TYPEDATA COMMA TYPEDATA GREATERTHAN . EQUALS MAP OF LPAREN pares RPAREN

    EQUALS          shift and go to state 97


state 78

    (1) ejec -> WHILE LPAREN ID comparation INT RPAREN FUNSEP . option FUNSEP
    (17) option -> . assignment
    (18) option -> . assignmentL
    (19) option -> . printDW
    (22) assignment -> . vas ID EQUALS data
    (23) assignmentL -> . assignmentL assignment
    (24) assignmentL -> . assignment
    (8) printDW -> . print
    (9) printDW -> . print printDW
    (25) vas -> . VAL
    (26) vas -> . VAR
    (7) print -> . PRINTLN LPAREN data RPAREN

    VAL             shift and go to state 35
    VAR             shift and go to state 36
    PRINTLN         shift and go to state 104

    option                         shift and go to state 98
    assignment                     shift and go to state 99
    assignmentL                    shift and go to state 100
    printDW                        shift and go to state 101
    vas                            shift and go to state 102
    print                          shift and go to state 103

state 79

    (43) ejec -> ID DOT FOR EACH FUNSEP PRINTLN LPAREN . ID RPAREN FUNSEP

    ID              shift and go to state 105


state 80

    (3) atrib -> vas ID DOUBLEP TYPEDATA . EQUALS data

    EQUALS          shift and go to state 106


state 81

    (42) funcionproduccion -> ID DOUBLEP funciondato COMMA . funcionproduccion
    (41) funcionproduccion -> . funcionparametro
    (42) funcionproduccion -> . ID DOUBLEP funciondato COMMA funcionproduccion
    (38) funcionparametro -> . ID DOUBLEP funciondato

    ID              shift and go to state 107

    funcionproduccion              shift and go to state 108
    funcionparametro               shift and go to state 109

state 82

    (53) param -> ID DOUBLEP TYPEDATA EQUALS . data
    (11) data -> . INT
    (12) data -> . CHAR
    (13) data -> . FLOAT
    (14) data -> . STR

    INT             shift and go to state 84
    CHAR            shift and go to state 85
    FLOAT           shift and go to state 86
    STR             shift and go to state 87

    data                           shift and go to state 110

state 83

    (10) ejec -> FUN ID LPAREN funcionparametro RPAREN DOUBLEP data . FUNSEP RETURN ID FUNSEP

    FUNSEP          shift and go to state 111


state 84

    (11) data -> INT .

    FUNSEP          reduce using rule 11 (data -> INT .)
    COMMA           reduce using rule 11 (data -> INT .)
    RPAREN          reduce using rule 11 (data -> INT .)
    VAL             reduce using rule 11 (data -> INT .)
    VAR             reduce using rule 11 (data -> INT .)
    $end            reduce using rule 11 (data -> INT .)


state 85

    (12) data -> CHAR .

    FUNSEP          reduce using rule 12 (data -> CHAR .)
    COMMA           reduce using rule 12 (data -> CHAR .)
    RPAREN          reduce using rule 12 (data -> CHAR .)
    VAL             reduce using rule 12 (data -> CHAR .)
    VAR             reduce using rule 12 (data -> CHAR .)
    $end            reduce using rule 12 (data -> CHAR .)


state 86

    (13) data -> FLOAT .

    FUNSEP          reduce using rule 13 (data -> FLOAT .)
    COMMA           reduce using rule 13 (data -> FLOAT .)
    RPAREN          reduce using rule 13 (data -> FLOAT .)
    VAL             reduce using rule 13 (data -> FLOAT .)
    VAR             reduce using rule 13 (data -> FLOAT .)
    $end            reduce using rule 13 (data -> FLOAT .)


state 87

    (14) data -> STR .

    FUNSEP          reduce using rule 14 (data -> STR .)
    COMMA           reduce using rule 14 (data -> STR .)
    RPAREN          reduce using rule 14 (data -> STR .)
    VAL             reduce using rule 14 (data -> STR .)
    VAR             reduce using rule 14 (data -> STR .)
    $end            reduce using rule 14 (data -> STR .)


state 88

    (37) ejec -> FUN ID LPAREN funcionproduccion RPAREN DOUBLEP UNIT . FUNSEP FUNSEP

    FUNSEP          shift and go to state 112


state 89

    (54) ejec -> FUN ID LPAREN funcionproduccion RPAREN DOUBLEP TYPEDATA . EQUALS assignment

    EQUALS          shift and go to state 113


state 90

    (49) function -> FUN ID LPAREN params RPAREN DOUBLEP FUNSEP .

    $end            reduce using rule 49 (function -> FUN ID LPAREN params RPAREN DOUBLEP FUNSEP .)


state 91

    (52) param -> ID DOUBLEP . TYPEDATA
    (53) param -> ID DOUBLEP . TYPEDATA EQUALS data

    TYPEDATA        shift and go to state 64


state 92
